<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokemonBasestatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_hp"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_hp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:text="@string/pokemon_basestat_defaultStat"
                android:gravity="center_vertical"
                android:layout_weight="1"/>

            <ProgressBar
                android:id="@+id/progressBar_hp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:minWidth="50dp"
                android:minHeight="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_attack"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_attack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pokemon_basestat_defaultStat"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/progressBar_attack"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:minWidth="50dp"
                android:minHeight="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_defense"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_defense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pokemon_basestat_defaultStat"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/progressBar_defense"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:minWidth="50dp"
                android:minHeight="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_sp_atk"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_spattack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pokemon_basestat_defaultStat"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/progressBar_spattack"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:minWidth="50dp"
                android:minHeight="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_sp_def"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_spdefense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pokemon_basestat_defaultStat"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/progressBar_spdefense"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:minWidth="50dp"
                android:minHeight="30dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_speed"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pokemon_basestat_defaultStat"
                android:textColor="@android:color/black" />

            <ProgressBar
                android:id="@+id/progressBar_speed"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:minWidth="50dp"
                android:minHeight="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="50dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pokemon_basestat_total"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/textView_basestats_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pokemon_basestat_defaultStat"
                android:textColor="@android:color/black" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>